Refactor and enhance PandaCore backend: update README, implement API routes for text/speech processing, integrate WebSocket support, and improve AI services with conversation history management.

--- a/pandacore/requirements.txt
+++ b/pandacore/requirements.txt
@@ -1,3 +1,10 @@
 fastapi
 uvicorn
-python-dotenv 
+python-dotenv
+google-generativeai
+speechrecognition
+pydub
+python-multipart
+websockets
+aiofiles
+httpx 
